# dsp-meta

./: .gitignore  .markdownlint.yml  .release-please-config.json  .rustfmt.toml  404.html  CHANGELOG.md  CLAUDE.md  Cargo.nix  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.observability.yml  flake.nix  grafana-datasources.yaml  index.html  justfile  mkdocs.yml  package-lock.json  package.json  release-please-config.json  result-bin  vars.mk
.github/: CODEOWNERS  codecov.yml  dependabot.yml
.github/release-please/: config.json  manifest.json
.github/workflows/: check-pr-title.yml  check.yml  docker-build.yml  docs.yml  main.yml  publish.yml  release-please.yml  rolling.yml  safety.yml  scheduled.yml  test.yml
adding-metadata/: index.html
benches/: rdf_bench.rs
code/back-end/: index.html
code/front-end/: index.html
code/observability/: index.html
code/overview/: index.html
data/: CLAUDE.md  add_status.py  add_status.python  dokubib.hcl  global.hcl  hdm.hcl  incunabula.hcl  orgs.hcl
data/0803/: datasets.hcl  grants.hcl  orgs.hcl  persons.hcl  project.hcl
data/0804/: datasets.hcl  orgs.hcl  project.hcl
data/adding-metadata/: index.html
data/api/: index.html
data/current-datamodel/: index.html
data/datamodel/: index.html
data/examples/: sgv.json  sgv.toml  sgv.yaml
data/future-datamodel/: index.html
data/json/: Proto4DigEd.json  Rome.json  _bilddatenbank.json  _dssl.json  _rosetta.json  activites-cs.json  atlasdisciplines.json  aura-effizienz.json  awg.json  beol.json  beyondthetext.json  big-data-in-agriculture.json  biz.json  (+68 more)
docs/: adding-metadata.md  index.md
dsp-domain/: CHANGELOG.md  Cargo.toml
dsp-domain/src/: error.rs  lib.rs
dsp-domain/src/metadata/entity/: dataset.rs  grant.rs  mod.rs  organization.rs  person.rs  project.rs  project_metadata.rs
dsp-domain/src/metadata/value/: abstract.rs  access.rs  alternative_name.rs  attribution.rs  data_type.rs  description.rs  discipline.rs  funder.rs  identifier.rs  iso_code.rs  keyword.rs  lang_text_data.rs  language.rs  license.rs  mod.rs  publication.rs  ref_data.rs  simple_text_data.rs  spatial_coverage.rs  status.rs  temporal_coverage.rs  url.rs  version.rs
dsp-domain/src/ontology/: mod.rs
dsp-domain/src/serde_rdf/: mod.rs
dsp-meta/: CHANGELOG.md  Cargo.toml
dsp-meta-cli/: CHANGELOG.md  Cargo.toml
dsp-meta-cli/src/: main.rs
dsp-meta-cmd/: CHANGELOG.md  Cargo.toml
dsp-meta-cmd/src/: cli.rs  main-server.rs  main-validator.rs
dsp-meta-server/: CHANGELOG.md  Cargo.toml
dsp-meta-server/src/: main.rs
dsp-meta/resources/: schema-metadata-draft.json  schema-metadata-final.json
dsp-meta/src/: app_state.rs  error.rs  lib.rs
dsp-meta/src/api/: api.rs  app.rs  mod.rs  router.rs
dsp-meta/src/api/convert/: mod.rs
dsp-meta/src/api/convert/axum/: dsp_meta_error.rs  project_metadata.rs  responses.rs
dsp-meta/src/api/convert/hcl/: dataset.rs  extracted_dataset_attributes.rs  extracted_dataset_blocks.rs  extracted_project_attributes.rs  extracted_project_blocks.rs  hcl_attribute.rs  hcl_block.rs  hcl_body.rs  mod.rs  project.rs  project_metadata.rs
dsp-meta/src/api/convert/hcl/entity/: mod.rs
dsp-meta/src/api/convert/hcl/entity/dataset/: extracted_dataset_attributes.rs  extracted_dataset_blocks.rs  mod.rs
dsp-meta/src/api/convert/hcl/entity/grant/: extracted_grant.rs  mod.rs
dsp-meta/src/api/convert/hcl/entity/project/: extracted_project_blocks.rs  mod.rs
dsp-meta/src/api/convert/hcl/value/: abstract.rs  alternative_name.rs  attribution.rs  description.rs  discipline.rs  keyword.rs  lang_text_data.rs  language.rs  license.rs  mod.rs  publication.rs  ref_data.rs  simple_text_data.rs  spatial_coverage.rs  temporal_coverage.rs  url.rs  version.rs
dsp-meta/src/api/convert/rdf/: error.rs  mod.rs  project.rs  project_metadata.rs
dsp-meta/src/api/convert/rdf/value/: mod.rs  shortcode.rs
dsp-meta/src/api/convert/serde/: draft_model.rs  json_schema_validator.rs  mod.rs
dsp-meta/src/api/handler/: mod.rs  project_metadata_handler.rs  robots_txt.rs  robots_txt_handler.rs  sitemap_xml.rs  sitemap_xml_handler.rs
dsp-meta/src/api/handler/v1/projects/: handler.rs  handlers.rs  mod.rs
dsp-meta/src/api/model/: mod.rs  project_infos_dto.rs  project_metadata_dto.rs  project_metadata_graph_dto.rs
dsp-meta/src/domain/: metadata_repository.rs  metadata_service.rs  mod.rs
dsp-meta/src/domain/model/: draft_model.rs  json_schema_validator.rs  project_info.rs
dsp-meta/src/domain/model/entity/: dataset.rs  mod.rs  person.rs  project.rs  project_metadata.rs
dsp-meta/src/domain/model/value/: alternative_name.rs  iso_code.rs  keyword.rs  lang_text_data.rs  mod.rs  ref_data.rs  url.rs
dsp-meta/src/domain/service/: metadata_service.rs  mod.rs  project_metadata_api_contract.rs  project_metadata_service.rs  repository_contract.rs
dsp-meta/src/infrastructure/: mod.rs
dsp-meta/src/operation/: convert.rs  validate.rs
dsp-meta/src/repo/: metadata_repository.rs  mod.rs
dsp-meta/src/repo/service/: project_metadata_repository.rs
dsp-meta/tests/: api_tests.rs  draft_schema_test.rs  hcl_learning.rs  integration_test.rs  json-toml.rs  toml_learning.rs
dsp-meta/tests/api/model/convert/toml/: json-toml.rs
dsp-meta/tests/common/: mod.rs
example_http/: get_all_projects.http  get_projects_count.http  get_single_project.http  get_single_project_as_rdf.http  store_project_metadata.http
example_output_formats/: hdm.jsonld  hdm.ttl  hdm.xml
examples/: full.hcl  simple_project.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_project_metadata.rs
resources/: schema-metadata-draft.json
search/: search_index.json
serde-rdf/: Cargo.toml
serde-rdf/examples/: deserialize.rs  serialize.rs
serde-rdf/src/: de.rs  error.rs  ser.rs  structure.rs
serde_rdf/: Cargo.toml
serde_rdf/src/: de.rs  lib.rs  ser.rs  structure.rs
src/: cli.rs  error.rs  lib.rs  main-server.rs  main-validator.rs  main.rs
tests/: api_tests.rs  de.rs  draft_schema_test.rs  integration_test.rs
web-frontend/: .prettierrc.json  package-lock.json  package.json  rollup.config.js  tsconfig.json
(+194 files in other folders)
