[package]
name = "dsp-meta"
version = "2.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dasch-swiss/dsp-meta"
repository = "https://github.com/dasch-swiss/dsp-meta"
documentation = "https://github.com/dasch-swiss/dsp-meta"
readme = "README.md"
description = "DSP-META is a service that provides metadata for the DaSCH Service Platform (DSP)."
authors = ["DaSCH - Swiss National Data and Service Center for the Humanities"]

[dependencies]
anyhow = "1"
async-trait = "0.1.83"
axum = "0.7.7" # web framework
axum-macros = "0.4.2"
clap = { version = "4.5.20", features = ["derive"] } # command-line parser
config = "0.14.1" # Layered configuration with strong support for 12-factor applications
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1" # provides platform-specific locations for storing user configuration
http-body-util = "0.1.0"
indicatif = "0.17.8" # prograss bars and spinners
log = "0.4.22" # logging facade
once_cell = "1.20.2"
pid1 = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_with = "3.11.0"
serde_json = "1" # JSON serialization
nonempty = { version = "0.10.0", features = ["serialize"] }
valico = "4.0.0"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-test = "0.4.4"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "fs", "cors"] }
hyper = "1.5.0"
regex = "1.11.1"
thiserror = "1.0.67"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "registry",
  "std",
  "env-filter",
  "json",
] }
tracing-test = "0.2"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.16"
axum-test = "15.7.4"
fake = "2.10.0"

[[bin]]
name = "dsp-meta"
path = "src/main-server.rs"

[[bin]]
name = "dsp-meta-validator"
path = "src/main-validator.rs"
