[package]
name = "dsp-meta"
version = "2.3.16"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dasch-swiss/dsp-meta"
repository = "https://github.com/dasch-swiss/dsp-meta"
documentation = "https://github.com/dasch-swiss/dsp-meta"
readme = "README.md"
description = "DSP-META is a service that provides metadata for the DaSCH Service Platform (DSP)."
authors = ["DaSCH - Swiss National Data and Service Center for the Humanities"]

[dependencies]
anyhow = "1"
async-trait = "0.1.88"
axum = "0.8.4" # web framework
axum-macros = "0.5.0"
clap = { version = "4.5.43", features = ["derive"] } # command-line parser
config = "0.15.13" # Layered configuration with strong support for 12-factor applications
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "5.0.1" # provides platform-specific locations for storing user configuration
http-body-util = "0.1.3"
indicatif = "0.18.0" # prograss bars and spinners
log = "0.4.27" # logging facade
once_cell = "1.21.3"
pid1 = "0.1.5"
serde = { version = "1", features = ["derive"] }
serde_with = "3.14.0"
serde_json = "1" # JSON serialization
nonempty = { version = "0.12.0", features = ["serialize"] }
valico = "4.0.0"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-test = "0.4.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "fs", "cors"] }
hyper = "1.6.0"
regex = "1.11.1"
thiserror = "1.0.69"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "registry",
  "std",
  "env-filter",
  "json",
] }
tracing-test = "0.2"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.17"
axum-test = "17.3.0"
fake = "2.10.0"

[[bin]]
name = "dsp-meta"
path = "src/main-server.rs"

[[bin]]
name = "dsp-meta-validator"
path = "src/main-validator.rs"
