[package]
name = "dsp-meta-cmd"
version = "2.0.2"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsp-meta = { path = "../dsp-meta" }
anyhow.workspace = true
axum.workspace = true
axum-macros.workspace = true
clap.workspace = true
config.workspace = true
hcl-rs.workspace = true
hyper.workspace = true
log.workspace = true
pid1.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
url.workspace = true

[dev-dependencies]
assert_cmd = "2.0.16"

[[bin]]
name = "dsp-meta-server"
path = "src/main-server.rs"

[[bin]]
name = "dsp-meta-validator"
path = "src/main-validator.rs"
