[package]
name = "dsp-meta-server"
version = "0.1.3"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsp-meta = { path = "../dsp-meta", version = "0.1.3" }
anyhow.workspace = true
axum.workspace = true
axum-macros.workspace = true
clap.workspace = true
config.workspace = true
hcl-rs.workspace = true
hyper.workspace = true
log.workspace = true
pid1.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
url.workspace = true

[dev-dependencies]
assert_cmd = "2.0.12"

[[bin]]
name = "dsp-meta-server"
path = "src/main.rs"
