[package]
name = "dsp-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsp-domain = { path = "../dsp-domain", version = "0.0.2" }
anyhow.workspace = true
axum.workspace = true
axum-macros.workspace = true
clap.workspace = true
config.workspace = true
hcl-rs.workspace = true
hyper.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
sophia = "0.7.2"
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
url.workspace = true
thiserror = "1.0.50"

[dev-dependencies]
assert_cmd = "2.0.12"
