[package]
name = "dsp-meta"
version = "2.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-macros.workspace = true
clap.workspace = true
config.workspace = true
hcl-rs.workspace = true
toml.workspace = true
http-body-util.workspace = true
hyper.workspace = true
log.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
nonempty.workspace = true
valico.workspace = true
regex.workspace = true
sophia = "0.8.0"
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
url.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
assert_cmd = "2.0.16"
axum-test = "15.3.0"
fake = "2.9.2"
