[package]
name = "dsp-domain-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dsp-domain = { path = "../dsp-domain", version = "0.1.3" }
dsp-meta = { path = "../dsp-meta", version = "0.1.3" }
hcl-rs.workspace = true
unicode-normalization = "0.1"

[[bin]]
name = "fuzz_project_metadata"
path = "fuzz_targets/fuzz_project_metadata.rs"
test = false
doc = false
bench = false
