[package]
name = "dsp-meta-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dsp-domain = { path = "../dsp-domain", version = "0.1.3" }
dsp-meta = { path = "../dsp-meta", version = "0.1.3" }
hcl-rs = "0.16.7" # HCL converter
unicode-normalization = "0.1"

# Use independent workspace for fuzzers
[workspace]
members = ["."]

[[bin]]
name = "fuzz_project_metadata"
path = "fuzz_targets/fuzz_project_metadata.rs"
test = false
doc = false
bench = false
