[package]
name = "serde_rdf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
rio_api = { version = "0.8.4", features = [] }
rio_turtle = { version = "0.8.4", features = [] }
rio_xml = { version = "0.8.4", features = [] }

[[example]]
name = "serialize"
test = true

[[example]]
name = "deserialize"
test = true
